updated the css so that everything is aligned correctly

--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -7,7 +7,7 @@
 }
 h1 {
   font-size: 2em;
-  margin: 30px 50px 30px;
+  margin: 30px 100px 30px;
   font-family: "Open Sans", sans-serif;
   letter-spacing: 1px;
 }
@@ -15,7 +15,7 @@ h1 {
 p {
   font-size: 1.2em;
   line-height: 1.5;
-  margin: 0px 50px 50px;
+  margin: 0px 100px 50px;
   /* font-family: "Modular", monospace;
   letter-spacing: 1px; */
 }
